Addition if favicon logo

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,6 +8,11 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link
+      rel="shortcut icon"
+      href="./assets/logo/logo.png"
+      type="image/x-icon"
+    />
     <title>Creatives</title>
   </head>
   <body>
