--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,7 @@
     />
     <link
       rel="shortcut icon"
-      href="./assets/logo/logo.png"
+      href="./assets/favicon/favicon.png"
       type="image/x-icon"
     />
     <title>Creatives</title>
